--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 django = "5.2.0"
 psycopg2-binary = "^2.9.10"
+faker = "^37.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
