--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 django = "5.2.0"
 psycopg2-binary = "^2.9.10"
 faker = "^37.1.0"
+django-guardian = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
